<resources>
    <string name="app_name" translatable="false">Tasty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recipes">Recipes</string>
    <string name="favorite_recipes">Favorites</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="finger_food">Finger Food</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="breakfast">Breakfast</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="side_dish">Side Dish</string>
    <string name="diet_type">Diet Type</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="share">Share</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="menu">Menu</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>

    <string name="trivia">Trivia</string>
    <string name="interesting_fact">Interesting fact!</string>
    <string name="awesome_recipe_check_it_out">Here is some awesome recipe! Check it out!</string>

    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

    <string name="recipes_not_found">Recipes not found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="we_are_back_online">We are back online</string>
    <string name="timeout">Timeout</string>
    <string name="api_key_limited">API Key Limited</string>
    <string name="data_not_found">Data not found</string>

    <string name="delete_from_favorites">Delete this recipe from favorites?</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone</string>
    <string name="recipe_saved">Recipe saved</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Deleted</string>
    <string name="all_recipes_removed">All recipes removed</string>
    <string name="OK" translatable="false">OK</string>

    <string name="empty_string" translatable="false"> </string>
</resources>