<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.tms.an16.tasty.ui.recipes.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_recipesFragment_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/action_recipesFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteRecipesFragment"
        android:name="com.tms.an16.tasty.ui.favorite.FavoriteRecipesFragment"
        android:label="@string/favorite_recipes"
        tools:layout="@layout/fragment_favorite_recipes">
        <action
            android:id="@+id/action_favoriteRecipesFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/triviaFragment"
        android:name="com.tms.an16.tasty.ui.trivia.TriviaFragment"
        android:label="@string/trivia"
        tools:layout="@layout/fragment_trivia">

    </fragment>
    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="com.tms.an16.tasty.ui.recipes.bottomsheet.RecipesBottomSheet"
        android:label="RecipesBottomSheet"
        tools:layout="@layout/recipes_bottom_sheet">
        <action
            android:id="@+id/action_recipesBottomSheet_to_recipesFragment"
            app:destination="@id/recipesFragment"
            app:popUpTo="@id/recipesFragment"
            app:popUpToInclusive="true" />
    </dialog>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.tms.an16.tasty.ui.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">

        <argument
            android:name="id_recipe"
            app:argType="integer" />
    </fragment>
</navigation>