<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".ui.details.overview.OverviewFragment">

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/time_textView"
        app:layout_constraintEnd_toEndOf="@+id/time_textView"
        app:layout_constraintStart_toStartOf="@+id/time_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_textView"
        app:layout_constraintEnd_toStartOf="@+id/time_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@+id/likes_textView"
        app:layout_constraintEnd_toEndOf="@+id/likes_textView"
        app:layout_constraintStart_toStartOf="@+id/likes_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/font_appetite_italic"
        android:text="Title"
        android:textColor="@color/darker"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

    <TextView
        android:id="@+id/vegetarian_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/vegetarian"
        android:textColor="@color/dark"
        app:drawableStartCompat="@drawable/ic_check"
        app:drawableTint="@color/dark"
        app:layout_constraintStart_toStartOf="@id/title_textView"
        app:layout_constraintTop_toBottomOf="@id/title_textView" />

    <TextView
        android:id="@+id/vegan_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/vegan"
        android:textColor="@color/dark"
        app:drawableStartCompat="@drawable/ic_check"
        app:drawableTint="@color/dark"
        app:layout_constraintStart_toStartOf="@id/title_textView"
        app:layout_constraintTop_toBottomOf="@id/vegetarian_textView" />

    <TextView
        android:id="@+id/gluten_free_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/gluten_free"
        android:textColor="@color/dark"
        app:drawableStartCompat="@drawable/ic_check"
        app:drawableTint="@color/dark"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_textView" />

    <TextView
        android:id="@+id/dairy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dairy_free"
        android:textColor="@color/dark"
        app:drawableStartCompat="@drawable/ic_check"
        app:drawableTint="@color/dark"
        app:layout_constraintStart_toStartOf="@+id/gluten_free_textView"
        app:layout_constraintTop_toTopOf="@+id/vegan_textView" />

    <TextView
        android:id="@+id/healthy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/healthy"
        android:textColor="@color/dark"
        app:drawableStartCompat="@drawable/ic_check"
        app:drawableTint="@color/dark"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_textView" />

    <TextView
        android:id="@+id/cheap_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheap"
        android:textColor="@color/dark"
        app:drawableStartCompat="@drawable/ic_check"
        app:drawableTint="@color/dark"
        app:layout_constraintStart_toStartOf="@+id/healthy_textView"
        app:layout_constraintTop_toTopOf="@+id/dairy_textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>